Run image builder on module-path - wip